// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name component renders name with correct file size 1`] = `
<div
  class="gl-text-gray-900"
  data-testid="corpus-name"
>
  
    Corpus-sample-1-13830-23932
    
  <span
    class="gl-text-gray-500"
    data-testid="file-size"
  >
    (400 MB)
  </span>
</div>
`;

exports[`Name component renders the latest job 1`] = `
<div
  class="gl-text-gray-900"
  data-testid="corpus-name"
>
  
    Corpus-sample-1-13830-23932
    
  <span
    class="gl-text-gray-500"
    data-testid="file-size"
  >
    (400 MB)
  </span>
</div>
`;

exports[`Name component without job path renders a - string instead of a link 1`] = `
<div
  class="gl-text-gray-900"
  data-testid="corpus-name"
>
  
    Corpus-sample-3-1431-4425
    
  <span
    class="gl-text-gray-500"
    data-testid="file-size"
  >
    (321 MB)
  </span>
</div>
`;
